# FZProx

./: .gitignore  LICENSE  README.md  pubspec.yaml  session.md
.claude/: settings.local.json
android/app/: build.gradle.kts
docs/: SPEC.md
hub/: Dockerfile  docker-compose.yml  go.mod  main.go  player.go  protocol.go  room.go  server.go  server_test.go
installer/: horizonprox.iss
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/audio/: audio_engine.dart  native_audio_ffi.dart  opus_codec_service.dart  peer_audio.dart
lib/client/: client.dart  local_test_controller.dart  session_runner.dart
lib/doppler/: doppler.dart
lib/hub/: hub_player.dart  hub_room.dart  hub_server.dart
lib/models/: audio_device_info.dart  audio_device_info.freezed.dart  car_state.dart  car_state.freezed.dart  peer_model.dart  peer_model.freezed.dart  proximity_params.dart  proximity_params.freezed.dart  room_info.dart  room_info.freezed.dart  setup_config.dart  setup_config.freezed.dart
lib/protocol/: protocol.dart
lib/proximity/: proximity_math.dart
lib/services/: settings_service.dart
lib/telemetry/: telemetry_receiver.dart
lib/ui/: app.dart  theme.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
poc/: __main__.py  audio.py  client.py  dsp.py  hub.py  pair.py  proximity.py  solo.py  track.py
test/: audio_pipeline_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/native_audio/: CMakeLists.txt  audio_engine.cpp  audio_engine.h
(+32 files in other folders)
